--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,8 @@ buildscript {
         appcompat_version = "1.4.0"
         live_data_version = "2.4.0"
         material_version = "1.4.0"
-        compose_version = "1.1.0-beta04"
-        hilt_navigation_compose_version = "1.0.0-beta01"
+        compose_version = "1.1.0-rc01"
+        hilt_navigation_compose_version = "1.0.0-rc01"
         firebase_bom_version = "29.0.3"
     }
     repositories {
