--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,12 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "ro.alexmamo.optimizerealtimedatabase"
         minSdk 21
-        targetSdk 31
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -52,7 +52,7 @@ dependencies {
     //Navigation Compose
     implementation "androidx.navigation:navigation-compose:$navigation_compose_version"
     //Compose
-    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.material:material:$material_version"
     //Hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
